--- a/bookbytes/pubspec.yaml
+++ b/bookbytes/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.jpg
+    - assets/images/guest.jpg
     - assets/eula.txt
 
   # To add assets to your application, add an assets section, like this:
