--- a/bookbytes_user/pubspec.yaml
+++ b/bookbytes_user/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^1.1.0
   intl: ^0.19.0
   shared_preferences: ^2.2.2
+  webview_flutter: ^4.4.4
 
 dev_dependencies:
   flutter_test:
